// Vitest Snapshot v1

exports[`Chrome theme generator > should provide installation instructions 1`] = `
"
1. Launch Chrome and go to \`chrome://extensions\`.
2. Check the \\"Developer mode\\" checkbox at the top.
3. Click the \\"Load unpacked extension...\\" button and choose the desired theme directory (\`Themer Dark\` or \`Themer Light\`).

(To reset or remove the theme, visit \`chrome://settings\` and click \\"Reset to Default\\" in the \\"Appearance\\" section.)
  "
`;

exports[`Chrome theme generator > should render properly formatted manifest files 1`] = `
{
  "manifest_version": 2,
  "name": "Themer Dark",
  "theme": {
    "colors": {
      "bookmark_text": [
        255,
        252,
        255,
      ],
      "frame": [
        40,
        38,
        41,
      ],
      "ntp_background": [
        71,
        66,
        71,
      ],
      "ntp_text": [
        255,
        252,
        255,
      ],
      "omnibox_background": [
        40,
        38,
        41,
      ],
      "omnibox_text": [
        255,
        252,
        255,
      ],
      "tab_background_text": [
        255,
        252,
        255,
      ],
      "tab_background_text_inactive": [
        255,
        252,
        255,
      ],
      "tab_background_text_incognito": [
        255,
        252,
        255,
      ],
      "tab_background_text_incognito_inactive": [
        255,
        252,
        255,
      ],
      "tab_text": [
        255,
        252,
        255,
      ],
      "toolbar": [
        71,
        66,
        71,
      ],
    },
    "tints": {
      "buttons": [
        0.5697167755991286,
        0.5,
        0.5,
      ],
      "frame_inactive": [
        -1,
        -1,
        -1,
      ],
      "frame_incognito": [
        0.7743589743589742,
        1,
        0.55,
      ],
      "frame_incognito_inactive": [
        0.7743589743589742,
        1,
        0.55,
      ],
    },
  },
}
`;

exports[`Chrome theme generator > should render properly formatted manifest files 2`] = `
{
  "manifest_version": 2,
  "name": "Themer Light",
  "theme": {
    "colors": {
      "bookmark_text": [
        40,
        38,
        41,
      ],
      "frame": [
        224,
        220,
        224,
      ],
      "ntp_background": [
        255,
        252,
        255,
      ],
      "ntp_text": [
        40,
        38,
        41,
      ],
      "omnibox_background": [
        224,
        220,
        224,
      ],
      "omnibox_text": [
        40,
        38,
        41,
      ],
      "tab_background_text": [
        40,
        38,
        41,
      ],
      "tab_background_text_inactive": [
        40,
        38,
        41,
      ],
      "tab_background_text_incognito": [
        40,
        38,
        41,
      ],
      "tab_background_text_incognito_inactive": [
        40,
        38,
        41,
      ],
      "tab_text": [
        40,
        38,
        41,
      ],
      "toolbar": [
        255,
        252,
        255,
      ],
    },
    "tints": {
      "buttons": [
        0.5692488262910799,
        0.5,
        0.5,
      ],
      "frame_inactive": [
        -1,
        -1,
        -1,
      ],
      "frame_incognito": [
        0.7745803357314148,
        1,
        0.45,
      ],
      "frame_incognito_inactive": [
        0.7745803357314148,
        1,
        0.45,
      ],
    },
  },
}
`;
